# viewer-two

./: .gitignore  AGENTS.md  README.md  pyproject.toml
benchmarks/: README.md  __init__.py  benchmark_array_encodings.py  benchmark_mzml_conversion.py  benchmark_validator.py  benchmark_zp_read.py  generate_scale_mzml.py  models.py  monitor.py  summarize_results.py
binary_layer/: __init__.py  blocks.py  bottom_up_exceptions.py  bottom_up_reader.py  bottom_up_schema.py  bottom_up_validator.py  constants.py  conversion_exceptions.py  dia_resource_limits.py  dia_result_adapter.py  dia_result_bundle.py  dia_spectrum_association.py  exceptions.py  inspector.py  logical_comparison.py  logical_fingerprint.py  migration.py  models.py  mzml_adapter.py  mzml_admission.py  mzml_schema.py  plan.py  precursor_contract.py  quick_validator.py  reader.py  registry.py  runner.py  serialization.py  service.py  thermo_raw_adapter.py  thermo_raw_schema.py  top_down_adapter.py  top_down_interpretation_adapter.py  top_down_interpretation_schema.py  top_down_reader.py  top_down_schema.py  top_down_validator.py  v1_arrays_stream_reader.py  v2_arrays_migration_writer.py  v2_arrays_reader.py  (+4 more)
docs/: P1_B6_ARRAY_STORAGE_DECISION.md  P1_B6_SCALE_MEMORY_ASSESSMENT.md  P1_B7_IMPLEMENTATION_PLAN.md  P1_MZML_IMPLEMENTATION_PLAN.md  P1_MZML_INVESTIGATION.md  P2_B1_TOP_DOWN.md  P2_B2_TOP_DOWN_INTERPRETATION.md  P2_C1_1_DIA_PRECURSOR_CONTRACT.md  P2_C1_BOTTOM_UP_INVESTIGATION.md  P2_C2_1_PERFORMANCE.md  P2_C2_DIA_NN_BOTTOM_UP.md  ZP_V2_BINARY_ARRAY_FORMAT_SPEC.md  ZP_V2_COMPATIBILITY_AND_MIGRATION.md
(+203 files in other folders)
