[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zp-binary-layer"
version = "0.1.0"
description = "P0 prototype for a mass-spectrometry .zp binary intermediate layer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pyteomics>=4.7.5,<5"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --basetemp=.pytest-tmp"

[tool.setuptools.packages.find]
include = ["binary_layer*"]
